--- a/FL11_HW2/homework/css/style.css
+++ b/FL11_HW2/homework/css/style.css
@@ -1,4 +1,5 @@
 @media print {
+
     body {
         background-color: white;
         text-align: center;
@@ -18,7 +19,7 @@
     }
 
     li::first-letter {
-        color: lightskyblue;
+        color: lightskyblue;        
         font-size: 1.5rem;
         font-weight: 300;
     }
@@ -51,7 +52,12 @@
         padding: 0 35px;
     }
     
-    .tm-main-nav, .tm-team-img, .gallery-container, .img-fluid, #contact, .carousel-indicators {
+    .tm-main-nav,
+    .tm-team-img,
+    .gallery-container,
+    .img-fluid,
+    #contact,
+    .carousel-indicators {
         display: none;
     }
 
@@ -63,12 +69,197 @@
         padding: 20px;
     }
 
-    .padding-medium, .tm-main-content, #tmCarousel {
+    .padding-medium,
+    .tm-main-content,
+    #tmCarousel {
         padding: 0;
     }
 
-    .tm-content-box, .tm-section-title {
+    .tm-content-box,
+    .tm-section-title {
         margin-bottom: .5em;
     }
+}
 
+@media screen {
+    
+    .box-bg:hover {
+        background: lightskyblue;
+    }
+
+    .box-bg:hover h2 {
+        color: white;
+    }
+
+    nav,
+    section,
+    #home {
+        box-shadow: 0 0 10px rgba(61, 55, 61, 0.7);
+    }
+
+    .tm-banner {
+        background: #76cdd7;
+    }
+
+    .tm-banner-inner {
+        background: white;
+        text-shadow: 0 10px 2px #76cdd7, 0 3px 1px #76cdd7;
+        letter-spacing: .3em;
+        word-spacing: .7em;
+    }
+
+    .tm-banner-inner p {
+        animation: scaleTextX 5s linear 1s 5 normal;
+    }
+
+    @keyframes scaleTextX {
+        0% {
+            opacity: 0;
+        }
+        5% {
+            opacity: 1;
+        }
+        20% {
+            transform: scaleX(-1);
+        }
+        50% {
+            transform: scaleX(.5);
+        }
+        75% {
+            transform: scaleX(1);
+        }
+        100% {
+            transform: scaleX(1);
+        }
+    }
+
+    .tm-content-box.flex-2-col {
+        display: flex;
+    }
+
+    .tm-team-description-container.flex-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    section::before {
+        content: "";
+        position: absolute;    
+        width: 0;
+        height: 0;
+        border-top: 45px solid lightskyblue;
+        border-right: 45px solid transparent;
+    }
+
+    .heading h2 {
+        color: lightskyblue;
+        font-weight: 300;
+        text-align: center;
+    }
+
+    .heading ol {
+        list-style: lower-roman;
+    }
+
+    .heading a {
+        padding-left: .3em;
+        border-left: 3px solid transparent;
+    }
+
+    .heading a:visited {
+        color: #ffb347;
+    }
+
+    .heading a:hover {
+        color: #ffb347;
+        font-weight: bold;
+        text-decoration: none;
+        border-left: 3px solid #ffb347;
+    }
+
+    .heading ol a.text::after {
+        content: 'New';
+        font-size: 10px;
+        color: red;
+        vertical-align: super;
+        font-weight: bold;
+    }
+
+    .blocks li:nth-child(even) {
+        background: #f5f5f5;
+    }
+
+    .blocks .box {
+        padding: .5em;
+    }
+
+    .blocks .box p {
+        font-style: italic;
+    }
+    
+    .blocks .box p::first-letter {
+        font-size: 2em;
+    }
+
+    .form-control {
+        border: 2px solid transparent;
+        border-bottom: 2px solid lightskyblue;
+        border-radius: 5px;
+    }
+
+    .form-control:focus {
+        background-color: #76cdd7;
+        border: 2px solid lightskyblue;
+        border-radius: 5px;
+    }
+
+    .mandatory-field::after {
+        content: "";
+        position: absolute;
+        height: 25px;
+        width: 25px;
+        top: 7px;
+        right: 10px;
+        background-image: url('../img/email-icon.png');
+        background-size: cover;
+    }
+
+    textarea.form-control {
+        resize: none;
+        height: 239px;
+        border: 2px solid lightskyblue;
+    }
+
+    .submit-btn {
+        border: 2px solid lightskyblue;
+        background-color: white;
+        float: right;
+        border-radius: 0;
+        color: lightskyblue;
+        padding: .8rem 3.5rem;
+        font-weight: 300;
+        font-size: 1.4rem;
+    }
+
+    .submit-btn:hover {
+        color: white;
+        background-color: lightskyblue;
+        border-color: white;
+    }
+
+    nav li:hover {
+        background-color: #f5f5f5;
+    }
+    
+    h2+p {
+        font-style: italic;
+        
+    }
+
+    .tm-team-description-container p,
+    #tmCarousel p {
+        text-indent: 2em;
+        line-height: 2em;
+    }
 }
